# CBot

./: .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: auto-build.yml  build.yml  code-check.yml  release.yml
include/: imgui-cocos.hpp
src/: backend.cpp  cckeyboarddispatcher.cpp  clickpackhandler.cpp  clickpackhandler.h  hooks.cpp  main.cpp  menu.cpp  menu.h  playerobject.cpp  playlayer.cpp
src/utilities/: SimpleFMOD.cpp  SimpleFMOD.h  fast_random.cpp  fast_random.h
test/: CBot_Algorithm.cpp  CBot_Algorithm.h  CCScheduler.cpp  CMakeLists.txt  GameManager.cpp  GameManager.h  autoupdate.cpp  autoupdate.h  config.h  fmodengine.cpp  fmodengine.h  gjbasegamelayer.cpp  gjbasegamelayer.h  gui.cpp  gui.h  macro.cpp  macro.h  main.cpp  mod.json  pch.h  playerobject.cpp  playlayer.cpp  random.cpp  random.h  safetyhook.cpp  utils.h
